# scud_lgtu

./: .gitignore  DATA_FLOW_DIAGRAM.md  DEPLOYMENT.md  README.md  REFACTORING_SPEC.md  REFACTORING_STATUS.md  __init__.py  access_controller.py  api_server.py  app.py  backend_client.py  business_logic_stub.py  config.yml  emulator_client.py  engine.py  event_store.py  events.py  generate_qr.py  identifier_hash.py  inject_events.py  local_access.json  models.py  mux_worker.py  passage_detector.py  pin_controller.py  pin_controller_thread.py  pyproject.toml  qr_decoder.py  qr_encoder.py  run_lgtu_controller.py  run_lgtu_controller_mock.py  run_lgtu_controller_mock_interactive.py  run_mock_devices.py  run_mock_devices_interactive.py  serial_reader.py  shift_reg_worker.py  signal_writer.py  test_device.py  test_emulator_input.py  test_hardware.py  (+1 more)
docs/: api.md  api_usage.md  architecture.md  testing.md
key/: private_key.0  private_key.1  private_key.10  private_key.11  private_key.12  private_key.13  private_key.165  private_key.166  private_key.167  private_key.168  private_key.169  private_key.170  private_key.171  private_key.172  private_key.173  private_key.174  private_key.175  private_key.176  private_key.177  private_key.178  private_key.179  private_key.180  private_key.181  private_key.182  private_key.2  private_key.3  private_key.4  private_key.5  private_key.6  private_key.7  private_key.8  private_key.9  public_key.0  public_key.1  public_key.10  public_key.11  public_key.12  public_key.13  public_key.165  public_key.166  (+56 more)
lgtu_controller_package/: README.md  (+3 more)
(+151 files in other folders)
