[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scud_lgtu"
version = "0.1.0"
description = "СКУД на базе gpiod + threading для Orange Pi Zero LTS"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Данил Сытников", email = "d.sytnikov@int-sys.ru"}
]
dependencies = [
    "gpiod>=2.0.0",
    "pyserial>=3.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scud_lgtu*"]
